--- a/scss/common.scss
+++ b/scss/common.scss
@@ -1,48 +1,36 @@
 $pc: #343C8E;
 $sc: #3AAA35;
 
-.common{
+// svg{
+// 	width:100%;
+// 	height: auto;
+// }
+
+.modal-body {
+	background: $pc;
+}
+
+.close {
+	position: absolute;
+	right: -40px;
+	text-shadow: unset;
+	color:red;
+	line-height: unset;
+	width: 30px;
+	height: 30px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	transform-origin: center center;
-	top: 0;
-	left: 0;
-	border: 0.25px solid black;
-	position: absolute;
-	cursor: pointer;
-	transition:0.3s all;
-	font-size: 11px;
-	
+	border-radius:30px;
 
 	&:hover{
-		transform: scale(1.5);
-		z-index: 1;
+		color: red;
 	}
 }
 
-.popover{
-	background: $pc;
-    max-width: 400px;
+button.close{
+	background-color: #ffffff;
 }
-
-.bs-popover-right>.arrow::after{
-	border-right-color:$pc;
-}
-
-.bs-popover-left>.arrow::after{
-	border-left-color:$pc;
-}
-
-.bs-popover-bottom>.arrow::after{
-	border-bottom-color:$pc;
-}
-
-.bs-popover-top>.arrow::after{
-	border-top-color:$pc;
-}
-
-
 
 .popover-body {
     color: #ffffff;
@@ -53,23 +41,20 @@ $sc: #3AAA35;
 
 .pop-content{
 	padding: (.5rem/2) (.75rem/2);
-	flex-basis: 20%;
 	box-sizing: border-box;
+	flex-grow: 1;
 
-	&.client-name,&.client-address{
-		flex-basis: 100%;
-	}
-	&.block,&.sector,&.plot{
-		flex-basis: 10%;
-	}
 	&.road{
-		flex-basis: 26%;
+		flex-grow:2;
 	}
 	&.size{
-		flex-basis: 26%;
+		flex-grow:2;
 	}
 	&.facing,&.file-number,&.client-phone{
 		flex-basis: (100%/3);
+	}
+	&.client-name,&.client-address{
+		flex-basis: 100%;
 	}
 }
 
