--- a/css/common.css
+++ b/css/common.css
@@ -18,11 +18,26 @@
 
 button.close {
   background-color: #ffffff; }
+  button.close i {
+    font-size: 1rem; }
+
+g[id^='BH_'] {
+  cursor: pointer; }
+
+[id^='Block_x5F_Text'] {
+  display: none; }
+
+.sold rect, .sold path, .sold polygon {
+  fill: red; }
+.sold text {
+  fill: #ffffff; }
+.sold rect + rect + path, .sold rect + rect + path + path {
+  fill: #ffffff; }
 
 .popover-body {
   color: #ffffff;
   display: flex;
-  padding: 0.5rem 0.375rem;
+  padding: unset;
   flex-wrap: wrap; }
 
 .pop-content {
@@ -33,8 +48,8 @@ button.close {
     flex-grow: 2; }
   .pop-content.size {
     flex-grow: 2; }
-  .pop-content.facing, .pop-content.file-number, .pop-content.client-phone {
-    flex-basis: 33.3333333333%; }
+  .pop-content.facing, .pop-content.file-number, .pop-content.client-phone, .pop-content.plot-status, .pop-content.sell-date {
+    flex-grow: 1; }
   .pop-content.client-name, .pop-content.client-address {
     flex-basis: 100%; }
 
@@ -44,6 +59,31 @@ button.close {
 .pop-value {
   padding: 2.5px 10px;
   background: #505abf;
-  border-radius: 5px; }
+  border-radius: 5px;
+  min-height: 30px; }
+
+.block-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-transform: uppercase;
+  font-size: 92px;
+  font-weight: bold;
+  color: rgba(255, 0, 0, 0.25);
+  white-space: nowrap; }
+  .block-text.block-a {
+    top: 677px;
+    left: 1403px; }
+  .block-text.block-vz {
+    top: 772px;
+    left: 981px;
+    transform: rotate(310deg);
+    font-size: 64px; }
+  .block-text:hover {
+    display: none; }
+
+@media (min-width: 576px) {
+  .modal-dialog {
+    min-width: 560px; } }
 
 /*# sourceMappingURL=common.css.map */
